<resources>
    <string name="app_name">Rayan</string>
    <string name="app_name_fa">رایان</string>
    <string name="hint_sign_in_phoneNumber">شماره موبایل</string>

    <string name="hint_edituser_phoneNumber">شماره موبایل</string>
    <string name="hint_edituser_name">نام و نام خانوادگی</string>
    <string name="gender_EditUser_Spinner_title">جنسیت</string>
    <string name="hint_edituser_email">ایمیل(اختیاری)</string>
    <string name="edituser_submitbtn">تایید</string>
    <string name="edituser_change_passwordbtn">تغییر رمز عبور</string>
    <string name="selectContact_confirmbtn">انتخاب</string>


    <string name="change_password_current_pass">کد یا رمز عبور فعلی</string>
    <string name="change_password_new_pass">رمز عبور جدید</string>
    <string name="change_password_new_pass2">تکرار رمز عبور جدید</string>

    <string name="register_password">رمز عبور(حداقل به طول 8)</string>
    <string name="register_password2">تکرار رمز عبور</string>
    <string name="confirm_code">کد تایید</string>
    <string name="text_confirm_code_button">تایید و ورود</string>
    <string name="hint_sign_in_password">رمز عبور</string>
    <string name="text_sign_in_button">ورود</string>
    <string name="text_forgot_pass_hint">بازیابی رمز عبور</string>
    <string name="text_sign_up_button">ثبت نام</string>
    <string name="leave_group_button">ترک گروه</string>
    <string name="title_deviceManagementActivity">مدیریت دستگاه‌ها</string>


    <string name="shortcut_not_supported">Current launcher doesn\'t support shortcuts</string>
    <string name="setting_notification_switch">دریافت نوتیفیکیشن</string>
    <string name="setting_theme_select">انتخاب تم برنامه</string>
    <string name="setting_theme1">تم اولیه</string>
    <string name="setting_theme2">تم دوم</string>
    <string name="setting_theme_btn">تغییر تم</string>
    <string name="creategroup_submit_btn">ایجاد گروه</string>
    <string name="creategroup_cancel_btn">بازگشت</string>

    <string-array name="choose_theme_setting">
        <item>"انتخاب تم اصلی"</item>
        <item>"انتخاب تم 2"</item>
        <item>"انتخاب تم 3"</item>
    </string-array>
    <string-array name="choose_theme_setting_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>


    <string name="drawer_devices_by_group"><b>گروه‌ها</b></string>
    <string name="drawer_devices"><b>مدیریت دستگاه‌ها</b></string>
    <string name="drawer_groups_manage"><b>مدیریت گروه‌ها</b></string>
    <string name="drawer_add_new_device"><b>اضافه کردن دستگاه جدید</b></string>
    <string name="drawer_setting"><b>تنظیمات</b></string>
    <string name="drawer_profile"><b>حساب کاربری</b></string>
    <string name="drawer_learning"><b>آموزش</b></string>
    <string name="drawer_support"><b>پشتیبانی</b></string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string-array name="qos_options">
        <item name="qos_0">0</item>
        <item name="qos_1">1</item>
        <item name="qos_2">2</item>
    </string-array>

    <string name="bottom_navigation_item1">مورد علاقه\u200cها</string>
    <string name="bottom_navigation_item2">سناریو\u200cها</string>
    <string name="bottom_navigation_item3">دستگاه\u200cها</string>

    <string name="action_add_connection">Add Connection</string>
    <string name="add_connection_general_label">General</string>
    <string name="add_connection_client_id_label">Client ID</string>
    <string name="add_connection_client_id_default">AndroidClient</string>
    <string name="add_connection_server_label">Server</string>
    <string name="add_connection_server_default">iot.eclipse.org</string>
    <string name="add_connection_port_label">Port</string>
    <string name="add_connection_clean_session_label">Clean Session</string>
    <string name="add_connection_advanced_label">Advanced</string>
    <string name="add_connection_username_label">Username</string>
    <string name="add_connection_password_label">Password</string>
    <string name="add_connection_timeout_label">Timeout</string>
    <string name="add_connection_keepalive_label">Keepalive</string>
    <string name="add_connection_tls_server_key_label">Server TLS Key</string>
    <string name="add_connection_tls_client_key_label">Client TLS Key</string>
    <string name="add_connection_lwt_label">Last Will &amp; Testament</string>
    <string name="add_connection_lwt_topic_label">Topic</string>
    <string name="add_connection_lwt_message_label">Message</string>
    <string name="add_connection_lwt_retain_label">Retain</string>
    <string name="add_connection_lwt_qos_label">QoS</string>
    <string name="hello_world">Hello world!</string>

    <string name="connection_connected_to">Connected to</string>
    <string name="connection_disconnected_from">Disconnected from</string>
    <string name="connection_unknown_status">Unknown connection status to</string>
    <string name="connection_connecting_to">Connecting to</string>
    <string name="connection_disconnecting_from">Disconnecting from</string>
    <string name="connection_error_connecting_to">An error occurred connecting to</string>
    <string name="connection_clear">Clear</string>
    <string name="subscription_new">New Subscription</string>


    <string name="manage_title">Manage Connection</string>
    <string name="manage_delete">Delete Connection</string>
    <string name="manage_edit">Edit Connection</string>

    <string name="notifyTitle">MQTT Message Received</string>
    <string name="notifyTitle_connectionLost">MQTT Client Has Lost Connection</string>

    <!-- Strings that need formatting  -->
    <string name="messageRecieved">Received message %1$s &lt;br/&gt; &lt;small&gt;Topic: %2$s &lt;/small&gt; </string>
    <string name="timestamp">&lt;br/&gt; &lt;small&gt; %1$s &lt;/small&gt;</string>
    <string name="notification">%1$s has received %2$s on topic %3$s</string>
    <string name="toast_pub_success">Published message: %1$s to topic: %2$s</string>
    <string name="toast_sub_success">Subscribed to %1$s</string>
    <string name="toast_disconnected">Disconnected</string>
    <string name="toast_pub_failed">Failed to publish message: %1$s to topic: %2$s</string>
    <string name="toast_sub_failed">Failed to subscribe to %1$s</string>
    <string name="connection_lost">%1$s has lost connection to %2$s</string>

    <!-- Strings for Subscriptions Fragment -->
    <string name="topic_label">Topic</string>
    <string name="qos_label">QoS</string>
    <string name="notify_label">Show Notifications</string>
    <string name="subscribe_ok">OK</string>
    <string name="subscribe_cancel">Cancel</string>
    <string name="qos_text">QoS: %1$d</string>
    <string name="notify_text">Notifications: %1$s</string>


    <!-- Strings for Help Fragment -->
    <string name="help_and_feedback">Help &amp; Feedback</string>
    <string name="help_paho">Paho</string>
    <string name="help_title">Eclipse Paho Android Example Utility</string>
    <string name="help_email_button">Get Help or send Feedback</string>
    <string name="help_paho_website">Go to the Paho Website</string>
    <string name="help_enable_logging">Enable Paho Logging</string>


    <!-- Home Fragment -->
    <string name="home_no_connections">No Connections</string>
    <string name="home_no_cons_message">It looks like there are no connections defined yet.</string>


    <!-- messages -->
    <string name="message_time">Time:</string>
    <string name="message_time_fmt">Time: %1$s</string>
    <string name="publish">Publish</string>
    <string name="topic_fmt">Topic: %1$s</string>


    <string name="enabled">Enabled</string>
    <string name="disabled">Disabled</string>


    <!-- placeholders -->
    <string name="placeholder_main_label">Main Label</string>
    <string name="placeholder_sub_label">Sub Label</string>
    <string name="placeholder_example">Example application</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_settingss">Settings</string>
    <string name="no_remote_found">ریموتی وجود ندارد\nایجاد ریموت جدید</string>


</resources>
