<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/theme_select_layout"
    app:layout_behavior="android.support.design.widget.BottomSheetBehavior">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layoutDirection="rtl"
        android:gravity="center_horizontal"
        android:orientation="vertical">
    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setting_theme_select"
        android:textSize="20sp" />

    <RadioGroup
        android:id="@+id/theme_setting_radiogroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center">

        <RadioButton
            android:id="@+id/theme1_setting_radiobutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:onClick="radioButtonClicked"
            android:text="@string/setting_theme1" />

        <RadioButton
            android:id="@+id/theme2_setting_radiobutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:onClick="radioButtonClicked"
            android:text="@string/setting_theme2" />

    </RadioGroup>
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>