<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="rtl"
    android:background="@color/white"
    android:id="@+id/registerUserLayout">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp">


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/phone_register_EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="12dp"
                    android:layout_marginTop="15dp"
                    android:gravity="right"
                    android:hint="@string/hint_edituser_phoneNumber"
                    android:imeOptions="actionNext"
                    android:inputType="phone"
                    android:maxLines="1"
                    android:textSize="16sp" />
            </android.support.design.widget.TextInputLayout>

       <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/email_register_EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="12dp"
                    android:layout_marginTop="15dp"
                    android:gravity="right"
                    android:hint="@string/hint_edituser_email"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:textSize="16sp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleContentDescription="Description"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="#1da1f3">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/password_register_EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="12dp"
                    android:layout_marginTop="15dp"
                    android:gravity="right"
                    android:hint="@string/register_password"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textSize="16sp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleContentDescription="Description"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="#1da1f3">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/passwordReapet_register_EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="12dp"
                    android:layout_marginTop="15dp"
                    android:gravity="right"
                    android:hint="@string/register_password2"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textSize="16sp" />
            </android.support.design.widget.TextInputLayout>

    </LinearLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/register_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="20dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/button_radus"
        android:padding="12dp"
        android:text="@string/text_sign_up_button"
        android:textColor="@color/white"
        android:textSize="19dp" />
</RelativeLayout>