<?xml version="1.0" encoding="utf-8"?><androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"    xmlns:app="http://schemas.android.com/apk/res-auto"    xmlns:tools="http://schemas.android.com/tools"    android:layout_width="match_parent"    android:layout_height="match_parent"    android:layoutDirection="rtl">    <LinearLayout        android:layout_width="match_parent"        android:layout_height="match_parent"        android:orientation="vertical"        android:layout_marginTop="20dp">        <LinearLayout            android:layout_width="match_parent"            android:layout_height="wrap_content"            android:orientation="horizontal"            tools:layout_editor_absoluteX="16dp"            tools:layout_editor_absoluteY="86dp">            <ImageView                android:layout_width="wrap_content"                android:layout_height="match_parent"                android:layout_margin="12dp"                app:srcCompat="@drawable/ic_email" />            <com.google.android.material.textfield.TextInputLayout                android:id="@+id/nameInputLayout"                android:layout_width="match_parent"                android:layout_height="wrap_content"                android:textColorHint="@color/blue_dark_2">                <com.google.android.material.textfield.TextInputEditText                    android:id="@+id/name_EditUser_EditText"                    android:layout_width="match_parent"                    android:layout_height="wrap_content"                    android:layout_margin="12dp"                    android:layout_marginTop="15dp"                    android:clickable="false"                    android:gravity="right"                    android:hint="@string/hint_edituser_name"                    android:imeOptions="actionNext"                    android:maxLength="15"                    android:maxLines="1"                    android:textSize="16sp" />            </com.google.android.material.textfield.TextInputLayout>        </LinearLayout>        <LinearLayout            android:layout_width="match_parent"            android:layout_height="wrap_content"            tools:layout_editor_absoluteX="0dp"            tools:layout_editor_absoluteY="178dp">            <ImageView                android:layout_width="wrap_content"                android:layout_height="match_parent"                android:layout_margin="12dp"                app:srcCompat="@drawable/ic_email" />            <com.google.android.material.textfield.TextInputLayout                android:id="@+id/phoneeInputLayout"                android:layout_width="match_parent"                android:layout_height="wrap_content"                android:textColorHint="@color/blue_dark_2"                app:passwordToggleContentDescription="Description"                app:passwordToggleEnabled="true"                app:passwordToggleTint="@color/baseColor2">                <com.google.android.material.textfield.TextInputEditText                    android:id="@+id/phone_EditUser_EditText"                    android:layout_width="match_parent"                    android:layout_height="wrap_content"                    android:layout_margin="12dp"                    android:layout_marginTop="15dp"                    android:clickable="false"                    android:editable="false"                    android:gravity="right"                    android:hint="@string/hint_edituser_phoneNumber"                    android:imeOptions="actionDone"                    android:inputType="phone"                    android:longClickable="false"                    android:maxLength="13"                    android:maxLines="1"                    android:textSize="16sp" />            </com.google.android.material.textfield.TextInputLayout>        </LinearLayout>        <LinearLayout            android:layout_width="match_parent"            android:layout_height="wrap_content"            tools:layout_editor_absoluteX="0dp"            tools:layout_editor_absoluteY="260dp">            <ImageView                android:layout_width="wrap_content"                android:layout_height="match_parent"                android:layout_margin="12dp"                app:srcCompat="@drawable/ic_email" />            <com.google.android.material.textfield.TextInputLayout                android:id="@+id/emailInputLayout"                android:layout_width="match_parent"                android:layout_height="wrap_content"                android:textColorHint="@color/blue_dark_2"                app:passwordToggleContentDescription="Description"                app:passwordToggleEnabled="true"                app:passwordToggleTint="@color/baseColor2">                <com.google.android.material.textfield.TextInputEditText                    android:id="@+id/email_EditUser_EditText"                    android:layout_width="match_parent"                    android:layout_height="wrap_content"                    android:layout_margin="12dp"                    android:layout_marginTop="15dp"                    android:clickable="false"                    android:editable="false"                    android:gravity="right"                    android:hint="@string/hint_edituser_email"                    android:imeOptions="actionDone"                    android:inputType="textEmailAddress"                    android:longClickable="false"                    android:maxLines="1"                    android:textSize="16sp" />            </com.google.android.material.textfield.TextInputLayout>        </LinearLayout>        <LinearLayout            android:layout_width="match_parent"            android:layout_height="wrap_content"            android:layout_marginTop="20dp"            tools:layout_editor_absoluteX="0dp"            tools:layout_editor_absoluteY="260dp">            <com.jaredrummler.materialspinner.MaterialSpinner                android:id="@+id/gender_EditUser_Spinner"                android:layout_width="match_parent"                android:layout_height="wrap_content"                android:layout_marginLeft="15dp"                android:layout_marginRight="15dp"                android:hint="@string/gender_EditUser_Spinner_title"                android:textColorHint="#05ab9a"                app:met_floatingLabel="normal" />        </LinearLayout>        <LinearLayout            android:layout_width="match_parent"            android:layout_height="wrap_content"            android:layout_margin="15dp">            <Button                android:id="@+id/edituser_submitbtn"                android:layout_width="match_parent"                android:layout_height="wrap_content"                android:background="@color/baseColor"                android:text="@string/edituser_submitbtn" />        </LinearLayout>        <LinearLayout            android:layout_width="match_parent"            android:layout_height="wrap_content"            android:layout_marginLeft="15dp"            android:layout_marginRight="15dp"            android:layout_marginBottom="15dp">            <Button                android:id="@+id/edituser_change_passwordbtn"                android:layout_width="match_parent"                android:layout_height="wrap_content"                android:background="@color/baseColor"                android:text="@string/edituser_change_passwordbtn" />        </LinearLayout>    </LinearLayout></androidx.constraintlayout.widget.ConstraintLayout>