<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/grey_light_4"
    tools:context=".Activities.LoginActivity"
    android:layoutDirection="rtl"
    android:isScrollContainer="false"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:id="@+id/nestedScrollView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="180dp"
                    android:layout_height="180dp"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="65dp"
                    app:srcCompat="@drawable/ic_rayan" />
            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/app_name_fa"
                android:textAlignment="center"
                android:textColor="#fff400"
                android:textSize="35dp"
                android:visibility="invisible" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="0dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/background_edit_text"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_centerInParent="true"
                        android:layout_margin="12dp"
                        app:srcCompat="@drawable/ic_email" />

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/phoneInputLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="@color/blue_dark_2">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/phoneNumberEditText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="12dp"
                            android:layout_marginTop="15dp"
                            android:digits="0123456789+"
                            android:gravity="right"
                            android:hint="@string/hint_sign_in_phoneNumber"
                            android:imeOptions="actionNext"
                            android:inputType="phone"
                            android:maxLength="15"
                            android:maxLines="1"
                            android:textSize="16sp" />
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_centerInParent="true"
                        android:layout_margin="12dp"
                        app:srcCompat="@drawable/ic_password" />

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/passwordInputLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="@color/blue_dark_2"
                        app:passwordToggleContentDescription="Description"
                        app:passwordToggleEnabled="true"
                        app:passwordToggleTint="@color/baseColor2">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/passwordEditText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="12dp"
                            android:layout_marginTop="15dp"
                            android:gravity="right"
                            android:hint="@string/hint_sign_in_password"
                            android:imeOptions="actionDone"
                            android:inputType="textPassword"
                            android:maxLength="15"
                            android:maxLines="1"
                            android:textSize="16sp" />
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:clickable="true">

                <TextView
                    android:id="@+id/signInButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/background_sign_in_button"
                    android:clickable="true"
                    android:gravity="center"
                    android:padding="12dp"
                    android:text="@string/text_sign_in_button"
                    android:textAlignment="center"
                    android:textColor="@color/blue_dark_2"
                    android:textSize="17dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:orientation="horizontal"
                android:layout_marginBottom="20dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/forgotPasswordlayout"
                android:clickable="true"
                android:layout_weight="45">

                <TextView
                    android:id="@+id/forgotPasswordTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:layout_marginLeft="3dp"
                    android:layout_toStartOf="@+id/forgotPasswordButton"
                    android:layout_toLeftOf="@+id/forgotPasswordButton"
                    android:text="@string/text_forgot_pass_hint"

                    android:textColor="@color/grey_dark_1"
                    android:textSize="20sp" />

                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/forgotPasswordButton"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="0dp"
                    app:backgroundTint="#f9d20f"
                    app:fabSize="mini"
                    app:srcCompat="@drawable/ic_arrow_right" />
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/signUpLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:layout_weight="55">
                <TextView
                    android:id="@+id/signUpTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:layout_toStartOf="@+id/signUpButton"
                    android:layout_toLeftOf="@+id/signUpButton"
                    android:layout_marginLeft="3dp"
                    android:text="@string/text_sign_up_button"
                    android:textAlignment="center"
                    android:textColor="@color/grey_dark_1"
                    android:textSize="20sp" />

                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/signUpButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_alignParentLeft="true"
                    app:backgroundTint="#f9d20f"
                    app:fabSize="mini"
                    app:srcCompat="@drawable/ic_arrow_right" />
            </RelativeLayout>
            </LinearLayout>
        </LinearLayout>
</android.support.v4.widget.NestedScrollView>